--- a/a4-1test/Makefile
+++ b/a4-1test/Makefile
@@ -12,11 +12,19 @@ a4-1.out: Record.o Comparison.o ComparisonEngine.o Schema.o File.o DBFile.o Pipe
 gtest.out: Record.o Comparison.o ComparisonEngine.o Schema.o File.o DBFile.o Pipe.o BigQ.o Statistics.o y.tab.o lex.yy.o gtest.o
 	$(CC) -o gtest.out Record.o Comparison.o ComparisonEngine.o Schema.o File.o DBFile.o Pipe.o BigQ.o Statistics.o y.tab.o lex.yy.o gtest.cc -lfl -lpthread -lgtest
 
+a2test.out: Record.o Comparison.o ComparisonEngine.o Schema.o File.o BigQ.o DBFile.o Pipe.o Function.o y.tab.o lex.yy.o yyfunc.tab.o lex.yyfunc.o a2-test.o
+	$(CC) -o a2test.out Record.o Comparison.o ComparisonEngine.o Schema.o File.o BigQ.o DBFile.o Pipe.o Function.o y.tab.o lex.yy.o yyfunc.tab.o lex.yyfunc.o a2-test.o -lfl -lpthread
+a2-test.o: a2-test.cc
+	$(CC) -g -c a2-test.cc
+
 gtest.o: gtest.cc
 	$(CC) -g -c gtest.cc
 
 test.o: test.cc
 	$(CC) -g -c test.cc
+
+Function.o: Function.cc
+	$(CC) -g -c Function.cc
 
 Statistics.o: Statistics.cc
 	$(CC) -g -c Statistics.cc
@@ -50,9 +58,18 @@ y.tab.o: Parser.y
 	sed $(tag) y.tab.c -e "s/  __attribute__ ((__unused__))$$/# ifndef __cplusplus\n  __attribute__ ((__unused__));\n# endif/" 
 	g++ -c y.tab.c
 
+yyfunc.tab.o: ParserFunc.y
+	yacc -p "yyfunc" -b "yyfunc" -d ParserFunc.y
+	#sed $(tag) yyfunc.tab.c -e "s/  __attribute__ ((__unused__))$$/# ifndef __cplusplus\n  __attribute__ ((__unused__));\n# endif/" 
+	g++ -c yyfunc.tab.c
+
 lex.yy.o: Lexer.l
 	lex  Lexer.l
 	gcc  -c lex.yy.c
+
+lex.yyfunc.o: LexerFunc.l
+	lex -Pyyfunc LexerFunc.l
+	gcc  -c lex.yyfunc.c
 
 clean: 
 	rm -f *.o
