--- a/a4-2test/Makefile
+++ b/a4-2test/Makefile
@@ -9,6 +9,10 @@ endif
 
 a42.out: Schema.o Record.o Comparison.o ComparisonEngine.o File.o DBFile.o Pipe.o BigQ.o RelOp.o Function.o Statistics.o  y.tab.o lex.yy.o main.o
 	$(CC) -o a42.out Schema.o Record.o Comparison.o ComparisonEngine.o File.o DBFile.o Pipe.o BigQ.o RelOp.o Function.o Statistics.o y.tab.o lex.yy.o main.o -lfl -lpthread
+
+
+gtest.out: Schema.o Record.o Comparison.o ComparisonEngine.o File.o DBFile.o Pipe.o BigQ.o RelOp.o Function.o Statistics.o  y.tab.o lex.yy.o 
+	$(CC) -o gtest.out Schema.o Record.o Comparison.o ComparisonEngine.o File.o DBFile.o Pipe.o BigQ.o RelOp.o Function.o Statistics.o y.tab.o lex.yy.o gtest.cc -lfl -lpthread -lgtest
 	
 main.o : main.cc
 	$(CC) -g -c main.cc
